--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/router": "^16.2.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^5.0.4",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.16",
@@ -41,7 +43,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.1.3"
+    "tailwindcss": "^3.4.17"
   }
 }
