--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:json": "json-server --watch src/app/db.json --host 0.0.0.0 --port 3000",
-    "start:ng": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
-    "start": "concurrently \"npm run start:json\" \"npm run start:ng\"",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
