--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.4",
+    "postcss-cli": "^11.0.1",
     "tailwindcss": "^3.4.17"
   }
 }
